--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,8 +5,8 @@ ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /opt/
-COPY package.json package-lock.json ./
-RUN npm config set fetch-retry-maxtimeout 600000 -g && npm install --only=production
+COPY package.json yarn.lock ./
+RUN npm config set fetch-retry-maxtimeout 600000 -g && yarn --only=production
 ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
 COPY . .
